# socket_server

./: README.md  git_push.bat
esp-now/espnow/components/Ota/: CMakeLists.txt  ota.c
esp-now/espnow/main/: main.c
esp-now/espnow2/main/: main.c
tcp_client/: CMakeLists.txt
tcp_client/components/PubSubClient/: CMakeLists.txt
tcp_client/components/PubSubClient/include/: pub_sub_client.h
tcp_client/components/connect_wifi/: CMakeLists.txt
tcp_client/components/connect_wifi/include/: connect_wifi.h
tcp_client/components/connect_wifi/src/: connect_wifi.c
tcp_client/main/: tcp_client_main.c  tcp_client_v4.c
tcp_server/: CMakeLists.txt
tcp_server/components/PubSubClient/src/: pub_sub_client.c
tcp_server/components/connect_wifi/include/: connect_wifi.h
tcp_server/components/connect_wifi/src/: connect_wifi.c
tcp_server/components/socket_send/: CMakeLists.txt
tcp_server/components/socket_send/include/: socket_send.h
tcp_server/components/socket_send/src/: socket_send.c
tcp_server/main/: fgnndgfgfdhgfdgh.h  lib_tcp.h  main.c
uartnow/master_espnow_protocol - C3/: CMakeLists.txt
uartnow/master_espnow_protocol - C3/components/master_espnow_protocol/: CMakeLists.txt  Kconfig.projbuild  (+4 more)
uartnow/master_espnow_protocol/main/: main.c  mann.c
uartnow/mqttS3/: CMakeLists.txt
uartnow/mqttS3/main/: CMakeLists.txt  main.c  mann.c  mm.c
uartnow/slave_espnow_protocol/main/: main.c
udp_client/: CMakeLists.txt
udp_client/main/: udp_client.c
udp_server/: CMakeLists.txt
udp_server/components/udp_socket/: CMakeLists.txt
udp_server/main/: udp_server.c
(+37 files in other folders)
